@@ -1,9 +1,9 @@
 #Ruta Client properties
-#Sun Jan 07 12:02:55 CET 2018
+#Mon Jan 08 12:14:01 CET 2018
 mainFrame.height=832
-started=true
-mainFrame.title=Ruta Client - Rutasd
+started=false
 mainFrame.top=112
+mainFrame.title=Ruta Client - Rutasd
 D\:\\Fakultet\\_Diplomski\\_diplomski\ rad\\git\\RutaClient=false
 cdrEndPoint=http\://localhost\:7709/ruta-server-0.1.0-SNAPSHOT/CDR
 mainFrame.width=1242
